# bluehost_log_parser

./: .gitignore  README.md  conftest.py  pyproject.toml
assets/: sample.env  sample_my_secrets.py  sample_unzipped_logfile
misc/: countries.txt  cron_bluehost_log_parser.sh  launch-bluehost-logs.bat  sample.env  sample_my_secrets.py
src/bluehost_log_parser/: app.py  create_tables.py  create_views.py  db_checks.py  fetch_server_logs.py  fetch_whois_data.py  insert_activity.py  insert_unique_sources.py  mailer.py  main.py  parse_logs.py  populate_tables.py  schema.py  unzip_fetched_logs.py  unzip_fetched_server_logs.py  update_sources.py  update_sources_whois.py
src/bluehost_log_parser/assets/: sample_my_secrets.py
src/bluehost_log_parser/components/: category_dropdown.py  layout.py  year_dropdown.py
src/bluehost_log_parser/database/: db_checks.py  insert_activity.py  insert_unique_sources.py  update_sources.py
src/bluehost_log_parser/database/setup/: create_views.py  populate_tables.py
src/bluehost_log_parser/utils/: datetime_helper.py  mailer.py  ssh_agent_check.py
src/dashboard/: app.py
src/dashboard/components/: bar_chart.py  category_dropdown.py  code_dropdown.py  ids.py  layout.py  log_viewer.py  log_viewer_public.py  log_viewer_soho.py  map_viewer.py  month_dropdown.py  nation_dropdown.py  pie_chart.py  referal_dropdown.py  referral_dropdown.py  referrer_dropdown.py  response_dropdown.py  site_dropdown.py  soho_log_viewer.py  source_map,py  table_viewer.py  year_dropdown.py
src/dashboard/data/: loader.py  source.py
src/dashboard/pages/: analytics.py  logs.py  logs_public.py  logs_soho.py  maps.py  public_logs.py  soho_logs.py  viewer.py
tests/: test_fetch_server_logs.py  test_parse_logs.py
