[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluehost-log-parser"
version = "1.5.2"
dependencies = [
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.39",
    "python-dateutil>=2.9.0.post0",
    "country-converter>=1.3",
    "ipwhois>=1.3.0",
    "pymysql>=1.1.1",
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "dash-ag-grid>=31.3.1",
]

authors = [{ name = "Todd S", email = "info@tascs.net" }]

requires-python = ">=3.13"

maintainers = [{ name = "Todd S", email = "info@tascs.net" }]
description = "Bluehost Server Apache Log Parser"
readme = "README.md"
keywords = ["bluehost", "apache", "logs", "parse", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5", "ruff>=0.11.0"]
analysis = [
    "dash>=3.0.2",
    "dash-bootstrap-components>=2.0.0",
    "dash-ag-grid>=31.3.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a14",
]
